# ecc_calc

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: _main.rs  dereive.rs  lib.rs  main.rs
src/ecc/: ecc_value.rs  infinity_error.rs  mod.rs  secp256r1.rs
src/ecc/prime/: mod.rs
src/ecc/prime/curves/: eccurve.rs  mod.rs  secp256k1.rs  secp256r1.rs
src/ecc/prime/curves/errors/: mod.rs  public_key_parse_error.rs
src/ecc/prime/points/: affine.rs  jacobian.rs  mod.rs  standard_projective.rs
src/ecc/prime/points/errors/: convertion.rs
src/point/: affine.rs  infinity.rs  jacobian.rs  mod.rs
